<resources>
    <string name="app_name">ScreenChanger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="category_backgrounds">Backgrounds</string>
    <string name="category_fashion">Fashion</string>
    <string name="category_nature">Nature</string>
    <string name="category_science">Science</string>
    <string name="category_education">Education</string>
    <string name="category_feelings">Feelings</string>
    <string name="category_health">Health</string>
    <string name="people">People</string>
</resources>