<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".presentation.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginTop="@dimen/large"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnBackgrounds"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                android:layout_marginEnd="@dimen/medium"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_backgroungs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_backgrounds"
                    android:textColor="@color/white"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnFashion"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_fashion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_fashion"
                    android:textColor="@color/white"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnNature"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                android:layout_marginEnd="@dimen/medium"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_nature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_nature"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnScience"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_science" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_science"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnEducation"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                android:layout_marginEnd="@dimen/medium"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_education" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_education"
                    android:textColor="@color/white"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnFeelings"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_category_feelings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_feelings"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnHealth"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                android:layout_marginEnd="@dimen/medium"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bg_category_health" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_health"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPeople"
                android:layout_width="@dimen/category_width"
                android:layout_height="@dimen/category_height"
                app:cardCornerRadius="@dimen/medium">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitEnd"
                    android:src="@drawable/bg_category_people" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/people"
                    android:textColor="@color/white"
                    android:textSize="@dimen/category_text" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>